@@ -561,8 +561,6 @@ The port is assumed to be properly configured, for example using a
 transparent 8-bit data connection without parity at 115200 Baud
 for a STK500.
 
-@emph{This feature is currently not implemented for Win32 systems.}
-
 
 @item -q
 Disable (or quell) output of the progress bar while reading or writing
